Mobile text overlap fix

--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ h3 {
   width: 85%;
   overflow-x: auto;
   scrollbar-width: none;
+  word-break: keep-all;
 }
 
 .fakeScreen > div::before {
